--- a/JDQA/JDQA/PatternShapes.xaml
+++ b/JDQA/JDQA/PatternShapes.xaml
@@ -9,27 +9,25 @@
       d:DesignWidth="300"
       Title="PatternShapes">
 
-    <Grid Margin="10,0,10,10">
+    <Grid Name="patternShapeParentGrid" Margin="10,0,10,10">
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition  Height="*"/>
-            <RowDefinition  Height="*"/>
-            <RowDefinition  Height="*"/>
-            <RowDefinition  Height="*"/>
-            <RowDefinition  Height="*"/>
-            <RowDefinition  Height="*"/>
-            <RowDefinition  Height="*"/>
-            <RowDefinition  Height="*"/>
-            <RowDefinition  Height="*"/>
-            <RowDefinition  Height="*"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition  Height="Auto"/>
+            <RowDefinition  Height="Auto"/>
+            <RowDefinition  Height="Auto"/>
+            <RowDefinition  Height="Auto"/>
+            <RowDefinition  Height="Auto"/>
+            <RowDefinition  Height="Auto"/>
+            <RowDefinition  Height="Auto"/>
+            <RowDefinition  Height="Auto"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Label Grid.Column="0" Grid.Row="0" HorizontalAlignment="Center" FontSize="15">Please Enter Pattern Shapes</Label>
         <Label Grid.Row="1">Z Group</Label>
-        <StackPanel Name="z1" Grid.Row="2" Orientation="Horizontal" Margin="0,0,0,0">
+        <StackPanel Name="ZStack" Grid.Row="2">
+        <StackPanel Name="z1" Orientation="Horizontal" Margin="0,0,0,0">
             <TextBox Width="50" MaxLength="4" x:Name="z1_1" KeyDown="moveIfMaxLength"/>
             <Label HorizontalAlignment="Center" VerticalAlignment="Center">-</Label>
             <TextBox Width="25" MaxLength="2" x:Name="z1_2" KeyDown="moveIfMaxLength"/>
@@ -46,7 +44,7 @@
             <Label HorizontalAlignment="Center">.</Label>
             <TextBox Width="20" MaxLength="2" x:Name="z1_8" KeyDown="moveIfMaxLength"></TextBox>
         </StackPanel>
-        <StackPanel x:Name="z2" Grid.Row="3" Orientation="Horizontal" Margin="0,0,0,0">
+        <StackPanel x:Name="z2" Orientation="Horizontal" Margin="0,0,0,0">
             <TextBox Width="50" MaxLength="4" x:Name="z2_1" KeyDown="moveIfMaxLength"  />
             <Label HorizontalAlignment="Center" VerticalAlignment="Center">-</Label>
             <TextBox Width="25" MaxLength="2" x:Name="z2_2" KeyDown="moveIfMaxLength"/>
@@ -63,7 +61,7 @@
             <Label HorizontalAlignment="Center">.</Label>
             <TextBox Width="20" MaxLength="2" x:Name="z2_8" KeyDown="moveIfMaxLength"></TextBox>
         </StackPanel>
-        <StackPanel x:Name="z3" Grid.Row="4" Orientation="Horizontal" Margin="0,0,0,0">
+        <StackPanel x:Name="z3" Orientation="Horizontal" Margin="0,0,0,0">
             <TextBox Width="50" MaxLength="4" x:Name="z3_1" KeyDown="moveIfMaxLength"  />
             <Label HorizontalAlignment="Center" VerticalAlignment="Center">-</Label>
             <TextBox Width="25" MaxLength="2" x:Name="z3_2" KeyDown="moveIfMaxLength"/>
@@ -80,58 +78,64 @@
             <Label HorizontalAlignment="Center">.</Label>
             <TextBox Width="20" MaxLength="2" x:Name="z3_8" KeyDown="moveIfMaxLength"></TextBox>
         </StackPanel>
-        <Label Grid.Row="6">X Group</Label>
-        <StackPanel x:Name="x1" Grid.Row="7" Orientation="Horizontal" Margin="0,0,0,0">
-            <TextBox Width="50" MaxLength="4" x:Name="x1_1" KeyDown="moveIfMaxLength"  />
-            <Label HorizontalAlignment="Center" VerticalAlignment="Center">-</Label>
-            <TextBox Width="25" MaxLength="2" x:Name="x1_2" KeyDown="moveIfMaxLength"/>
-            <Label HorizontalAlignment="Center" VerticalAlignment="Center">-</Label>
-            <TextBox Width="15" MaxLength="1" x:Name="x1_3" KeyDown="moveIfMaxLength"></TextBox>
-            <Label HorizontalAlignment="Center">.</Label>
-            <TextBox Width="20" MaxLength="2" x:Name="x1_4" KeyDown="moveIfMaxLength"></TextBox>
-            <Label HorizontalAlignment="Center" VerticalAlignment="Center">-</Label>
-            <TextBox Width="15" MaxLength="1" x:Name="x1_5" KeyDown="moveIfMaxLength"></TextBox>
-            <Label HorizontalAlignment="Center">.</Label>
-            <TextBox Width="20" MaxLength="2" x:Name="x1_6" KeyDown="moveIfMaxLength"></TextBox>
-            <Label HorizontalAlignment="Center" VerticalAlignment="Center">-</Label>
-            <TextBox Width="15" MaxLength="1" x:Name="x1_7" KeyDown="moveIfMaxLength"></TextBox>
-            <Label HorizontalAlignment="Center">.</Label>
-            <TextBox Width="20" MaxLength="2" x:Name="x1_8" KeyDown="moveIfMaxLength"></TextBox>
         </StackPanel>
-        <StackPanel x:Name="x2" Grid.Row="8" Orientation="Horizontal" Margin="0,0,0,0">
-            <TextBox Width="50" MaxLength="4" x:Name="x2_1" KeyDown="moveIfMaxLength"  />
-            <Label HorizontalAlignment="Center" VerticalAlignment="Center">-</Label>
-            <TextBox Width="25" MaxLength="2" x:Name="x2_2" KeyDown="moveIfMaxLength"/>
-            <Label HorizontalAlignment="Center" VerticalAlignment="Center">-</Label>
-            <TextBox Width="15" MaxLength="1" x:Name="x2_3" KeyDown="moveIfMaxLength"></TextBox>
-            <Label HorizontalAlignment="Center">.</Label>
-            <TextBox Width="20" MaxLength="2" x:Name="x2_4" KeyDown="moveIfMaxLength"></TextBox>
-            <Label HorizontalAlignment="Center" VerticalAlignment="Center">-</Label>
-            <TextBox Width="15" MaxLength="1" x:Name="x2_5" KeyDown="moveIfMaxLength"></TextBox>
-            <Label HorizontalAlignment="Center">.</Label>
-            <TextBox Width="20" MaxLength="2" x:Name="x2_6" KeyDown="moveIfMaxLength"></TextBox>
-            <Label HorizontalAlignment="Center" VerticalAlignment="Center">-</Label>
-            <TextBox Width="15" MaxLength="1" x:Name="x2_7" KeyDown="moveIfMaxLength"></TextBox>
-            <Label HorizontalAlignment="Center">.</Label>
-            <TextBox Width="20" MaxLength="2" x:Name="x2_8" KeyDown="moveIfMaxLength"></TextBox>
+        <Button Name="addZGroup" Grid.Row="3" Content="Add Z Pattern" Margin="0,10,0,0" Width="100" Click="addPattern"/>
+        <Label Grid.Row="4">X Group</Label>
+        <StackPanel x:Name="XStack" Grid.Row="5">
+            <StackPanel x:Name="x1" Grid.Row="8" Orientation="Horizontal" Margin="0,0,0,0">
+                <TextBox Width="50" MaxLength="4" x:Name="x1_1" KeyDown="moveIfMaxLength"  />
+                <Label HorizontalAlignment="Center" VerticalAlignment="Center">-</Label>
+                <TextBox Width="25" MaxLength="2" x:Name="x1_2" KeyDown="moveIfMaxLength"/>
+                <Label HorizontalAlignment="Center" VerticalAlignment="Center">-</Label>
+                <TextBox Width="15" MaxLength="1" x:Name="x1_3" KeyDown="moveIfMaxLength"></TextBox>
+                <Label HorizontalAlignment="Center">.</Label>
+                <TextBox Width="20" MaxLength="2" x:Name="x1_4" KeyDown="moveIfMaxLength"></TextBox>
+                <Label HorizontalAlignment="Center" VerticalAlignment="Center">-</Label>
+                <TextBox Width="15" MaxLength="1" x:Name="x1_5" KeyDown="moveIfMaxLength"></TextBox>
+                <Label HorizontalAlignment="Center">.</Label>
+                <TextBox Width="20" MaxLength="2" x:Name="x1_6" KeyDown="moveIfMaxLength"></TextBox>
+                <Label HorizontalAlignment="Center" VerticalAlignment="Center">-</Label>
+                <TextBox Width="15" MaxLength="1" x:Name="x1_7" KeyDown="moveIfMaxLength"></TextBox>
+                <Label HorizontalAlignment="Center">.</Label>
+                <TextBox Width="20" MaxLength="2" x:Name="x1_8" KeyDown="moveIfMaxLength"></TextBox>
+            </StackPanel>
+            <StackPanel x:Name="x2" Grid.Row="9" Orientation="Horizontal" Margin="0,0,0,0">
+                <TextBox Width="50" MaxLength="4" x:Name="x2_1" KeyDown="moveIfMaxLength"  />
+                <Label HorizontalAlignment="Center" VerticalAlignment="Center">-</Label>
+                <TextBox Width="25" MaxLength="2" x:Name="x2_2" KeyDown="moveIfMaxLength"/>
+                <Label HorizontalAlignment="Center" VerticalAlignment="Center">-</Label>
+                <TextBox Width="15" MaxLength="1" x:Name="x2_3" KeyDown="moveIfMaxLength"></TextBox>
+                <Label HorizontalAlignment="Center">.</Label>
+                <TextBox Width="20" MaxLength="2" x:Name="x2_4" KeyDown="moveIfMaxLength"></TextBox>
+                <Label HorizontalAlignment="Center" VerticalAlignment="Center">-</Label>
+                <TextBox Width="15" MaxLength="1" x:Name="x2_5" KeyDown="moveIfMaxLength"></TextBox>
+                <Label HorizontalAlignment="Center">.</Label>
+                <TextBox Width="20" MaxLength="2" x:Name="x2_6" KeyDown="moveIfMaxLength"></TextBox>
+                <Label HorizontalAlignment="Center" VerticalAlignment="Center">-</Label>
+                <TextBox Width="15" MaxLength="1" x:Name="x2_7" KeyDown="moveIfMaxLength"></TextBox>
+                <Label HorizontalAlignment="Center">.</Label>
+                <TextBox Width="20" MaxLength="2" x:Name="x2_8" KeyDown="moveIfMaxLength"></TextBox>
+            </StackPanel>
+            <StackPanel x:Name="x3" Grid.Row="10" Orientation="Horizontal" Margin="0,0,0,0">
+                <TextBox Width="50" MaxLength="4" x:Name="x3_1" KeyDown="moveIfMaxLength"  />
+                <Label HorizontalAlignment="Center" VerticalAlignment="Center">-</Label>
+                <TextBox Width="25" MaxLength="2" x:Name="x3_2" KeyDown="moveIfMaxLength"/>
+                <Label HorizontalAlignment="Center" VerticalAlignment="Center">-</Label>
+                <TextBox Width="15" MaxLength="1" x:Name="x3_3" KeyDown="moveIfMaxLength"></TextBox>
+                <Label HorizontalAlignment="Center">.</Label>
+                <TextBox Width="20" MaxLength="2" x:Name="x3_4" KeyDown="moveIfMaxLength"></TextBox>
+                <Label HorizontalAlignment="Center" VerticalAlignment="Center">-</Label>
+                <TextBox Width="15" MaxLength="1" x:Name="x3_5" KeyDown="moveIfMaxLength"></TextBox>
+                <Label HorizontalAlignment="Center">.</Label>
+                <TextBox Width="20" MaxLength="2" x:Name="x3_6" KeyDown="moveIfMaxLength"></TextBox>
+                <Label HorizontalAlignment="Center" VerticalAlignment="Center">-</Label>
+                <TextBox Width="15" MaxLength="1" x:Name="x3_7" KeyDown="moveIfMaxLength"></TextBox>
+                <Label HorizontalAlignment="Center">.</Label>
+                <TextBox Width="20" MaxLength="2" x:Name="x3_8" KeyDown="moveIfMaxLength"></TextBox>
+            </StackPanel>
         </StackPanel>
-        <StackPanel x:Name="x3" Grid.Row="9" Orientation="Horizontal" Margin="0,0,0,0">
-            <TextBox Width="50" MaxLength="4" x:Name="x3_1" KeyDown="moveIfMaxLength"  />
-            <Label HorizontalAlignment="Center" VerticalAlignment="Center">-</Label>
-            <TextBox Width="25" MaxLength="2" x:Name="x3_2" KeyDown="moveIfMaxLength"/>
-            <Label HorizontalAlignment="Center" VerticalAlignment="Center">-</Label>
-            <TextBox Width="15" MaxLength="1" x:Name="x3_3" KeyDown="moveIfMaxLength"></TextBox>
-            <Label HorizontalAlignment="Center">.</Label>
-            <TextBox Width="20" MaxLength="2" x:Name="x3_4" KeyDown="moveIfMaxLength"></TextBox>
-            <Label HorizontalAlignment="Center" VerticalAlignment="Center">-</Label>
-            <TextBox Width="15" MaxLength="1" x:Name="x3_5" KeyDown="moveIfMaxLength"></TextBox>
-            <Label HorizontalAlignment="Center">.</Label>
-            <TextBox Width="20" MaxLength="2" x:Name="x3_6" KeyDown="moveIfMaxLength"></TextBox>
-            <Label HorizontalAlignment="Center" VerticalAlignment="Center">-</Label>
-            <TextBox Width="15" MaxLength="1" x:Name="x3_7" KeyDown="moveIfMaxLength"></TextBox>
-            <Label HorizontalAlignment="Center">.</Label>
-            <TextBox Width="20" MaxLength="2" x:Name="x3_8" KeyDown="moveIfMaxLength"></TextBox>
-        </StackPanel>
-        <Button Grid.Row="11" x:Name="process_patternShapes" Click="calculateCorrelation">Process Pattern Shapes</Button>
+        <Button Name="addXGroup" Grid.Row="6" Content="Add X Pattern" Margin="0,10,0,0" Width="100" Click="addPattern"/>
+        <Label Name="caclulate_spacer" Grid.Row="7"  Height="15"/>
+        <Button Grid.Row="8" x:Name="process_patternShapes" Click="calculateCorrelation">Process Pattern Shapes</Button>
     </Grid>
 </Page>
