--- a/JDQA/JDQA/PatternShapes.xaml
+++ b/JDQA/JDQA/PatternShapes.xaml
@@ -28,110 +28,110 @@
         <Label Grid.Row="1">Z Group</Label>
         <StackPanel Name="ZStack" Grid.Row="2">
         <StackPanel Name="z1" Orientation="Horizontal" Margin="0,0,0,0">
-            <TextBox Width="50" MaxLength="4" x:Name="z1_1" KeyDown="moveIfMaxLength"/>
+            <TextBox Width="50" MaxLength="4" x:Name="z1_1" KeyUp="moveIfMaxLength"/>
             <Label HorizontalAlignment="Center" VerticalAlignment="Center">-</Label>
-            <TextBox Width="25" MaxLength="2" x:Name="z1_2" KeyDown="moveIfMaxLength"/>
+            <TextBox Width="25" MaxLength="2" x:Name="z1_2" KeyUp="moveIfMaxLength"/>
             <Label HorizontalAlignment="Center" VerticalAlignment="Center">-</Label>
-            <TextBox Width="15" MaxLength="1" x:Name="z1_3" KeyDown="moveIfMaxLength"></TextBox>
+            <TextBox Width="15" MaxLength="1" x:Name="z1_3" KeyUp="moveIfMaxLength"></TextBox>
             <Label HorizontalAlignment="Center">.</Label>
-            <TextBox Width="20" MaxLength="2" x:Name="z1_4" KeyDown="moveIfMaxLength"></TextBox>
+            <TextBox Width="20" MaxLength="2" x:Name="z1_4" KeyUp="moveIfMaxLength"></TextBox>
             <Label HorizontalAlignment="Center" VerticalAlignment="Center">-</Label>
-            <TextBox Width="15" MaxLength="1" x:Name="z1_5" KeyDown="moveIfMaxLength"></TextBox>
+            <TextBox Width="15" MaxLength="1" x:Name="z1_5" KeyUp="moveIfMaxLength"></TextBox>
             <Label HorizontalAlignment="Center">.</Label>
-            <TextBox Width="20" MaxLength="2" x:Name="z1_6" KeyDown="moveIfMaxLength"></TextBox>
+            <TextBox Width="20" MaxLength="2" x:Name="z1_6" KeyUp="moveIfMaxLength"></TextBox>
             <Label HorizontalAlignment="Center" VerticalAlignment="Center">-</Label>
-            <TextBox Width="15" MaxLength="1" x:Name="z1_7" KeyDown="moveIfMaxLength"></TextBox>
+            <TextBox Width="15" MaxLength="1" x:Name="z1_7" KeyUp="moveIfMaxLength"></TextBox>
             <Label HorizontalAlignment="Center">.</Label>
-            <TextBox Width="20" MaxLength="2" x:Name="z1_8" KeyDown="moveIfMaxLength"></TextBox>
+            <TextBox Width="20" MaxLength="2" x:Name="z1_8" KeyUp="moveIfMaxLength"></TextBox>
         </StackPanel>
         <StackPanel x:Name="z2" Orientation="Horizontal" Margin="0,0,0,0">
-            <TextBox Width="50" MaxLength="4" x:Name="z2_1" KeyDown="moveIfMaxLength"  />
+            <TextBox Width="50" MaxLength="4" x:Name="z2_1" KeyUp="moveIfMaxLength"  />
             <Label HorizontalAlignment="Center" VerticalAlignment="Center">-</Label>
-            <TextBox Width="25" MaxLength="2" x:Name="z2_2" KeyDown="moveIfMaxLength"/>
+            <TextBox Width="25" MaxLength="2" x:Name="z2_2" KeyUp="moveIfMaxLength"/>
             <Label HorizontalAlignment="Center" VerticalAlignment="Center">-</Label>
-            <TextBox Width="15" MaxLength="1" x:Name="z2_3" KeyDown="moveIfMaxLength"></TextBox>
+            <TextBox Width="15" MaxLength="1" x:Name="z2_3" KeyUp="moveIfMaxLength"></TextBox>
             <Label HorizontalAlignment="Center">.</Label>
-            <TextBox Width="20" MaxLength="2" x:Name="z2_4" KeyDown="moveIfMaxLength"></TextBox>
+            <TextBox Width="20" MaxLength="2" x:Name="z2_4" KeyUp="moveIfMaxLength"></TextBox>
             <Label HorizontalAlignment="Center" VerticalAlignment="Center">-</Label>
-            <TextBox Width="15" MaxLength="1" x:Name="z2_5" KeyDown="moveIfMaxLength"></TextBox>
+            <TextBox Width="15" MaxLength="1" x:Name="z2_5" KeyUp="moveIfMaxLength"></TextBox>
             <Label HorizontalAlignment="Center">.</Label>
-            <TextBox Width="20" MaxLength="2" x:Name="z2_6" KeyDown="moveIfMaxLength"></TextBox>
+            <TextBox Width="20" MaxLength="2" x:Name="z2_6" KeyUp="moveIfMaxLength"></TextBox>
             <Label HorizontalAlignment="Center" VerticalAlignment="Center">-</Label>
-            <TextBox Width="15" MaxLength="1" x:Name="z2_7" KeyDown="moveIfMaxLength"></TextBox>
+            <TextBox Width="15" MaxLength="1" x:Name="z2_7" KeyUp="moveIfMaxLength"></TextBox>
             <Label HorizontalAlignment="Center">.</Label>
-            <TextBox Width="20" MaxLength="2" x:Name="z2_8" KeyDown="moveIfMaxLength"></TextBox>
+            <TextBox Width="20" MaxLength="2" x:Name="z2_8" KeyUp="moveIfMaxLength"></TextBox>
         </StackPanel>
         <StackPanel x:Name="z3" Orientation="Horizontal" Margin="0,0,0,0">
-            <TextBox Width="50" MaxLength="4" x:Name="z3_1" KeyDown="moveIfMaxLength"  />
+            <TextBox Width="50" MaxLength="4" x:Name="z3_1" KeyUp="moveIfMaxLength"  />
             <Label HorizontalAlignment="Center" VerticalAlignment="Center">-</Label>
-            <TextBox Width="25" MaxLength="2" x:Name="z3_2" KeyDown="moveIfMaxLength"/>
+            <TextBox Width="25" MaxLength="2" x:Name="z3_2" KeyUp="moveIfMaxLength"/>
             <Label HorizontalAlignment="Center" VerticalAlignment="Center">-</Label>
-            <TextBox Width="15" MaxLength="1" x:Name="z3_3" KeyDown="moveIfMaxLength"></TextBox>
+            <TextBox Width="15" MaxLength="1" x:Name="z3_3" KeyUp="moveIfMaxLength"></TextBox>
             <Label HorizontalAlignment="Center">.</Label>
-            <TextBox Width="20" MaxLength="2" x:Name="z3_4" KeyDown="moveIfMaxLength"></TextBox>
+            <TextBox Width="20" MaxLength="2" x:Name="z3_4" KeyUp="moveIfMaxLength"></TextBox>
             <Label HorizontalAlignment="Center" VerticalAlignment="Center">-</Label>
-            <TextBox Width="15" MaxLength="1" x:Name="z3_5" KeyDown="moveIfMaxLength"></TextBox>
+            <TextBox Width="15" MaxLength="1" x:Name="z3_5" KeyUp="moveIfMaxLength"></TextBox>
             <Label HorizontalAlignment="Center">.</Label>
-            <TextBox Width="20" MaxLength="2" x:Name="z3_6" KeyDown="moveIfMaxLength"></TextBox>
+            <TextBox Width="20" MaxLength="2" x:Name="z3_6" KeyUp="moveIfMaxLength"></TextBox>
             <Label HorizontalAlignment="Center" VerticalAlignment="Center">-</Label>
-            <TextBox Width="15" MaxLength="1" x:Name="z3_7" KeyDown="moveIfMaxLength"></TextBox>
+            <TextBox Width="15" MaxLength="1" x:Name="z3_7" KeyUp="moveIfMaxLength"></TextBox>
             <Label HorizontalAlignment="Center">.</Label>
-            <TextBox Width="20" MaxLength="2" x:Name="z3_8" KeyDown="moveIfMaxLength"></TextBox>
+            <TextBox Width="20" MaxLength="2" x:Name="z3_8" KeyUp="moveIfMaxLength"></TextBox>
         </StackPanel>
         </StackPanel>
         <Button Name="addZGroup" Grid.Row="3" Content="Add Z Pattern" Margin="0,10,0,0" Width="100" Click="addPattern"/>
         <Label Grid.Row="4">X Group</Label>
         <StackPanel x:Name="XStack" Grid.Row="5">
             <StackPanel x:Name="x1" Grid.Row="8" Orientation="Horizontal" Margin="0,0,0,0">
-                <TextBox Width="50" MaxLength="4" x:Name="x1_1" KeyDown="moveIfMaxLength"  />
+                <TextBox Width="50" MaxLength="4" x:Name="x1_1" KeyUp="moveIfMaxLength"  />
                 <Label HorizontalAlignment="Center" VerticalAlignment="Center">-</Label>
-                <TextBox Width="25" MaxLength="2" x:Name="x1_2" KeyDown="moveIfMaxLength"/>
+                <TextBox Width="25" MaxLength="2" x:Name="x1_2" KeyUp="moveIfMaxLength"/>
                 <Label HorizontalAlignment="Center" VerticalAlignment="Center">-</Label>
-                <TextBox Width="15" MaxLength="1" x:Name="x1_3" KeyDown="moveIfMaxLength"></TextBox>
+                <TextBox Width="15" MaxLength="1" x:Name="x1_3" KeyUp="moveIfMaxLength"></TextBox>
                 <Label HorizontalAlignment="Center">.</Label>
-                <TextBox Width="20" MaxLength="2" x:Name="x1_4" KeyDown="moveIfMaxLength"></TextBox>
+                <TextBox Width="20" MaxLength="2" x:Name="x1_4" KeyUp="moveIfMaxLength"></TextBox>
                 <Label HorizontalAlignment="Center" VerticalAlignment="Center">-</Label>
-                <TextBox Width="15" MaxLength="1" x:Name="x1_5" KeyDown="moveIfMaxLength"></TextBox>
+                <TextBox Width="15" MaxLength="1" x:Name="x1_5" KeyUp="moveIfMaxLength"></TextBox>
                 <Label HorizontalAlignment="Center">.</Label>
-                <TextBox Width="20" MaxLength="2" x:Name="x1_6" KeyDown="moveIfMaxLength"></TextBox>
+                <TextBox Width="20" MaxLength="2" x:Name="x1_6" KeyUp="moveIfMaxLength"></TextBox>
                 <Label HorizontalAlignment="Center" VerticalAlignment="Center">-</Label>
-                <TextBox Width="15" MaxLength="1" x:Name="x1_7" KeyDown="moveIfMaxLength"></TextBox>
+                <TextBox Width="15" MaxLength="1" x:Name="x1_7" KeyUp="moveIfMaxLength"></TextBox>
                 <Label HorizontalAlignment="Center">.</Label>
-                <TextBox Width="20" MaxLength="2" x:Name="x1_8" KeyDown="moveIfMaxLength"></TextBox>
+                <TextBox Width="20" MaxLength="2" x:Name="x1_8" KeyUp="moveIfMaxLength"></TextBox>
             </StackPanel>
             <StackPanel x:Name="x2" Grid.Row="9" Orientation="Horizontal" Margin="0,0,0,0">
-                <TextBox Width="50" MaxLength="4" x:Name="x2_1" KeyDown="moveIfMaxLength"  />
+                <TextBox Width="50" MaxLength="4" x:Name="x2_1" KeyUp="moveIfMaxLength"  />
                 <Label HorizontalAlignment="Center" VerticalAlignment="Center">-</Label>
-                <TextBox Width="25" MaxLength="2" x:Name="x2_2" KeyDown="moveIfMaxLength"/>
+                <TextBox Width="25" MaxLength="2" x:Name="x2_2" KeyUp="moveIfMaxLength"/>
                 <Label HorizontalAlignment="Center" VerticalAlignment="Center">-</Label>
-                <TextBox Width="15" MaxLength="1" x:Name="x2_3" KeyDown="moveIfMaxLength"></TextBox>
+                <TextBox Width="15" MaxLength="1" x:Name="x2_3" KeyUp="moveIfMaxLength"></TextBox>
                 <Label HorizontalAlignment="Center">.</Label>
-                <TextBox Width="20" MaxLength="2" x:Name="x2_4" KeyDown="moveIfMaxLength"></TextBox>
+                <TextBox Width="20" MaxLength="2" x:Name="x2_4" KeyUp="moveIfMaxLength"></TextBox>
                 <Label HorizontalAlignment="Center" VerticalAlignment="Center">-</Label>
-                <TextBox Width="15" MaxLength="1" x:Name="x2_5" KeyDown="moveIfMaxLength"></TextBox>
+                <TextBox Width="15" MaxLength="1" x:Name="x2_5" KeyUp="moveIfMaxLength"></TextBox>
                 <Label HorizontalAlignment="Center">.</Label>
-                <TextBox Width="20" MaxLength="2" x:Name="x2_6" KeyDown="moveIfMaxLength"></TextBox>
+                <TextBox Width="20" MaxLength="2" x:Name="x2_6" KeyUp="moveIfMaxLength"></TextBox>
                 <Label HorizontalAlignment="Center" VerticalAlignment="Center">-</Label>
-                <TextBox Width="15" MaxLength="1" x:Name="x2_7" KeyDown="moveIfMaxLength"></TextBox>
+                <TextBox Width="15" MaxLength="1" x:Name="x2_7" KeyUp="moveIfMaxLength"></TextBox>
                 <Label HorizontalAlignment="Center">.</Label>
-                <TextBox Width="20" MaxLength="2" x:Name="x2_8" KeyDown="moveIfMaxLength"></TextBox>
+                <TextBox Width="20" MaxLength="2" x:Name="x2_8" KeyUp="moveIfMaxLength"></TextBox>
             </StackPanel>
             <StackPanel x:Name="x3" Grid.Row="10" Orientation="Horizontal" Margin="0,0,0,0">
-                <TextBox Width="50" MaxLength="4" x:Name="x3_1" KeyDown="moveIfMaxLength"  />
+                <TextBox Width="50" MaxLength="4" x:Name="x3_1" KeyUp="moveIfMaxLength"  />
                 <Label HorizontalAlignment="Center" VerticalAlignment="Center">-</Label>
-                <TextBox Width="25" MaxLength="2" x:Name="x3_2" KeyDown="moveIfMaxLength"/>
+                <TextBox Width="25" MaxLength="2" x:Name="x3_2" KeyUp="moveIfMaxLength"/>
                 <Label HorizontalAlignment="Center" VerticalAlignment="Center">-</Label>
-                <TextBox Width="15" MaxLength="1" x:Name="x3_3" KeyDown="moveIfMaxLength"></TextBox>
+                <TextBox Width="15" MaxLength="1" x:Name="x3_3" KeyUp="moveIfMaxLength"></TextBox>
                 <Label HorizontalAlignment="Center">.</Label>
-                <TextBox Width="20" MaxLength="2" x:Name="x3_4" KeyDown="moveIfMaxLength"></TextBox>
+                <TextBox Width="20" MaxLength="2" x:Name="x3_4" KeyUp="moveIfMaxLength"></TextBox>
                 <Label HorizontalAlignment="Center" VerticalAlignment="Center">-</Label>
-                <TextBox Width="15" MaxLength="1" x:Name="x3_5" KeyDown="moveIfMaxLength"></TextBox>
+                <TextBox Width="15" MaxLength="1" x:Name="x3_5" KeyUp="moveIfMaxLength"></TextBox>
                 <Label HorizontalAlignment="Center">.</Label>
-                <TextBox Width="20" MaxLength="2" x:Name="x3_6" KeyDown="moveIfMaxLength"></TextBox>
+                <TextBox Width="20" MaxLength="2" x:Name="x3_6" KeyUp="moveIfMaxLength"></TextBox>
                 <Label HorizontalAlignment="Center" VerticalAlignment="Center">-</Label>
-                <TextBox Width="15" MaxLength="1" x:Name="x3_7" KeyDown="moveIfMaxLength"></TextBox>
+                <TextBox Width="15" MaxLength="1" x:Name="x3_7" KeyUp="moveIfMaxLength"></TextBox>
                 <Label HorizontalAlignment="Center">.</Label>
-                <TextBox Width="20" MaxLength="2" x:Name="x3_8" KeyDown="moveIfMaxLength"></TextBox>
+                <TextBox Width="20" MaxLength="2" x:Name="x3_8" KeyUp="moveIfMaxLength"></TextBox>
             </StackPanel>
         </StackPanel>
         <Button Name="addXGroup" Grid.Row="6" Content="Add X Pattern" Margin="0,10,0,0" Width="100" Click="addPattern"/>
