--- a/JDQA/JDQA/JDQASplash.xaml
+++ b/JDQA/JDQA/JDQASplash.xaml
@@ -19,9 +19,10 @@
                 <Border.Background>
                     <SolidColorBrush Color="#5a7fec"/>
                 </Border.Background>
-                <TextBlock Foreground="White" TextWrapping="WrapWithOverflow" TextAlignment="Center" IsEnabled="False" HorizontalAlignment="Center"  VerticalAlignment="Center" FontSize="20" FontWeight="Bold">Pattern Shape Analyzer v0.03.01</TextBlock>
+                <TextBlock Foreground="White" TextWrapping="WrapWithOverflow" TextAlignment="Center" IsEnabled="False" HorizontalAlignment="Center"  VerticalAlignment="Center" FontSize="20" FontWeight="Bold">Pattern Shape Analyzer v0.03.03</TextBlock>
             </Border>
-            <Button Margin="30" Name="enterButton" Click="enterApplication" KeyDown="enterKeyDown">Enter</Button>
+            <Button Margin="30" Name="enterButton" Click="enterApplication" KeyDown="enterKeyDown">Phase I</Button>
+            <Button Margin="30" Name="enterButton" Click="enterApplication" KeyDown="enterKeyDown">Phase II</Button>
         </StackPanel>
     </Grid>
 </Page>
