--- a/JDQA/JDQA/ProcessShortForm_2.xaml
+++ b/JDQA/JDQA/ProcessShortForm_2.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="JDQA.ProcessShortForm"
+﻿<Page x:Class="JDQA.ProcessShortForm_2"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,19 +6,18 @@
       xmlns:local="clr-namespace:JDQA"
       mc:Ignorable="d" 
       d:DesignHeight="300" d:DesignWidth="300"
-      Title="ProcessShortForm">
+      Title="ProcessShortForm_2">
 
     <Grid Name="ShortFormGrid">
         <StackPanel>
-            <Label>Select ALL Chosen options from the short form</Label>
+            <Label>Select the 10 Circled choices</Label>
             <StackPanel Orientation="Horizontal" Name="checkRow1"></StackPanel>
             <StackPanel Orientation="Horizontal" Name="checkRow2"></StackPanel>
             <StackPanel Orientation="Horizontal" Name="checkRow3"></StackPanel>
             <StackPanel Orientation="Horizontal" Name="checkRow4"></StackPanel>
             <StackPanel Orientation="Horizontal" Name="checkRow5"></StackPanel>
             <StackPanel Orientation="Horizontal" Name="checkRow6"></StackPanel>
-            <Button Click="goToNexStep" HorizontalAlignment="Right">Next Step</Button>
+            <Button HorizontalAlignment="Right">Next Step</Button>
         </StackPanel>
-        
     </Grid>
 </Page>
